--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cz-conventional-changelog": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
