--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
     "release": "standard-version",
-    "postrelease": "git push --follow-tags && conventional-github-releaser"
+    "postrelease": "git push --follow-tags && conventional-github-releaser -p angular"
   },
   "repository": {
     "type": "git",
