--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-git",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "\"# learn-git\"",
   "main": "index.js",
   "dependencies": {},
@@ -10,10 +10,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
-    "postbump" : "node version.js",
-    "precommit" : "git add -A && git commit -m 'chore: update versions'",
+    "postbump": "node version.js",
+    "precommit": "git add -A && git commit -m 'chore: update versions'",
     "release": "standard-version",
-    "postrelease": "bump-version && git push --follow-tags && conventional-github-releaser -p angular"
+    "postrelease": "git push --follow-tags && conventional-github-releaser -p angular"
   },
   "repository": {
     "type": "git",
