--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-git",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "\"# learn-git\"",
   "main": "index.js",
   "dependencies": {},
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
-    "postbump": "node version.js",
+    "postchangelog": "node version.js",
+    "precommit": "git add README.md",
     "release": "standard-version",
     "postrelease": "git push --follow-tags && conventional-github-releaser -p angular"
   },
