--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
-    "release": "standard-version",
+    "release": "standard-version -a",
     "postrelease": "git push --follow-tags",
     "post-release": "conventional-github-releaser -p angular"
   },
@@ -31,8 +31,7 @@
   },
   "standard-version": {
     "scripts": {
-      "postchangelog": "node version.js && git add README.md",
-      "postcommit": "git commit -m \"chore: Update readme version.\""
+      "postchangelog": "node version.js && git add README.md"
     }
   }
 }
